--- a/service.yaml
+++ b/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: swe645-service
+  name: example-service
   labels:
-    app: swe645
+    app: example-app
 spec:
   type: LoadBalancer
   selector:
-    app: swe645
+    app: example-app
   ports:
     - protocol: TCP
       name: http
