--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,15 +1,19 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: swe645
+  name: example-deploy
   labels:
-    app: swe645
+    app: example-app
     test: test
+  annotations:
+    fluxcd.io/tag.example-app: semver:~1.0
+    fluxcd.io/automated: 'true'
 spec:
   selector:
     matchLabels:
-      app: swe645
-  replicas: 3
+      app: example-app
+  replicas: 2
   strategy:
     type: RollingUpdate
     rollingUpdate:
@@ -18,10 +22,10 @@ spec:
   template:
     metadata:
       labels:
-        app: swe645
+        app: example-app
     spec:
       containers:
-      - name: swe645
+      - name: example-app
         image: ganeshmandava1247889/webserver:latest
         imagePullPolicy: Always
         ports:
@@ -32,4 +36,10 @@ spec:
         #     port: 5000
         #   initialDelaySeconds: 3
         #   periodSeconds: 3
-       
+#         resources:
+#           requests:
+#             memory: "64Mi"
+#             cpu: "50m"
+#           limits:
+#             memory: "256Mi"
+#             cpu: "500m"
